--- a/assets/postcss/style.css
+++ b/assets/postcss/style.css
@@ -61,5 +61,6 @@
 @import "pages/_steps.css";
 @import "pages/_swap.css";
 @import "pages/_toast.css";
+@import "pages/_todo-app.css";
 @import "pages/_user-profile.css";
 @import "pages/_wow-animation.css";
