--- a/assets/pug/data/all-data.pug
+++ b/assets/pug/data/all-data.pug
@@ -18,6 +18,8 @@ include ./profile-setting.pug
 include ./recent-chat-app.pug
 include ./sidebar-menu.pug
 include ./tables.pug
+include ./todo-app-data.pug
+
 include ./user-card.pug
 include ./widgets.pug
 include ./email-index.pug
