--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -142,6 +142,10 @@ if(calendar_page)
     script(src='../../assets/js/calender/initialize.js')
     script(src='../../assets/js/calender/main.min.js')
 
+if(todoApp)
+    // todoApp js 
+    script(src='../../assets/js/todo-app.js') 
+
 if(customizer)
     // customizer js
     script(src="../../assets/js/customizer.js") 
