--- a/assets/pug/mixin/mixin.pug
+++ b/assets/pug/mixin/mixin.pug
@@ -23,6 +23,8 @@ include ./element-recent-activity.pug
 include ./element-social-media.pug
 include ./element-task-list-checkbox.pug
 include ./element-todo-list.pug
+include ./element-todo-app.pug
+include ./element-task-list-checkbox.pug
 include ./element-traffic-list.pug
 include ./element-user-card.pug
 include ./element-kanban-board.pug
